--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "luxon": "^3.4.4",
     "mongodb": "^5.5.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
