--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-tutorial",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
